# TradingStar30_Launcher_RS

./: Cargo.toml  app.rc  build.rs
.github/workflows/: build.yml
src/: main.rs  process.rs  settings.rs  ui.rs
