[package]
name = "TradingStar30_Launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["tokio", "advanced"] }
rfd = "0.14.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories-next = "2.0"
tokio-stream = "0.1"
ansi-parser = "0.8.0"
